--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.6",
     "express": "^4.17.1",
     "fetch": "^1.1.0",
+    "mongoose": "^5.12.7",
     "node-cron": "^3.0.0",
     "puppeteer": "^9.0.0",
     "request": "^2.88.2"
